fixed sx style and added scrollbar

--- a/frontend/src/app/styles/Profile.module.css
+++ b/frontend/src/app/styles/Profile.module.css
@@ -68,8 +68,8 @@
 
 .inner-screen {
   margin-top: 40px;
+  height: calc(100vh - 140px);
   width: 61.5vw;
-  overflow: visible;
 }
 
 .title {
